2010-08-17
 - WARNING: when quitting the program it will crash if at least one connection exists
 - selection of Modules do look better now
 - selecting a Connection is now possible (was very tricky before to click the right pixel) as the connection has 
   a wider range where a selection can be triggered
 - fixed some code where 0,1,2.. was used instead of PortDirection::OUT or similar
 - removing a Module via Model::removeRows(..) is specified as:
   - first: remove all outgoing connections (Connection)
   - second: remove all references (Connection)
   - finally: remove the Module (Module)
 - removing a Connection via the Model::removeRows(..) is specified as: 
   - when ~Connection is called, Connection c must remove the updatereference at both attached Ports, then remove it
 - Connection do register on both Port(s), so that Port::updateConnection() will trigger Connection::update()

2010-08-14
 - fixed a bug where removing of a module which has two outgoing connections (from the same output) 
   will crash the program 
   -> the problem was in Model::removeRows(..) where a for-loop was iterating over a shrinking container, 
      code was replaced by 'while(container.size()) {..}' statement

2010-08-13
 - removing of items from the QGraphicsScene/QGraphicsView is implemented:
      classes which were change in order to make removeRows work:
      Model::removeRows(..)
      |-DataAbstractItem
      | |-DataRoot
      | |-DataAbstractModule
      | |-DataPort
      | |-DataProperty
      | |-DataConnection
      |-ItemView (relay)         
      | |-rowsAboutToBeRemoved
      |-GraphicsScene
      | |-moduleRemoved       
      | |-connectionRemoved   
2010-08-12
 - DataType.h vs DataItemType.h, actually DataType.h lost and was removed
2010-08-11
 - QTreeView show items always expanded, see MainWidget.cpp::changeActiveDocument ( Document* doc )
 - fixed loop connection handling bug where two modules could be connection in a way they would form a loop